<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_schedule"
            android:title="@string/menu_concerts" />
        <item
            android:id="@+id/nav_password"
            android:icon="@drawable/ic_password"
            android:title="@string/menu_change_pass" />
    </group>
    <item
        android:id="@+id/nav_db_panel"
        android:title="@string/menu_edit_db"
        android:visible="false">
        <menu>
            <item
                android:visible="false"
                android:title="@string/menu_moders"
                android:icon="@drawable/ic_moders"
                android:id="@+id/nav_moders"/>
            <item
                android:visible="false"
                android:id="@+id/nav_concerts_db"
                android:icon="@drawable/ic_concerts_db"
                android:title="@string/menu_concerts_db" />
        </menu>
    </item>
</menu>