<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_schedule">

    <fragment
        android:id="@+id/nav_schedule"
        android:name="com.mycompany.concertschedule.ui.schedule.ScheduleFragment"
        android:label="@string/menu_concerts"
        tools:layout="@layout/fragment_schedule" />

    <fragment
        android:id="@+id/nav_password"
        android:name="com.mycompany.concertschedule.ui.change_pass.ChangePassFragment"
        android:label="@string/menu_change_pass"
        tools:layout="@layout/fragment_password" />

    <fragment
        android:id="@+id/nav_moders"
        android:name="com.mycompany.concertschedule.ui.moders.ModersFragment"
        android:label="@string/menu_moders"
        tools:layout="@layout/fragment_moders" />
    <fragment
        android:id="@+id/nav_concerts_db"
        android:name="com.mycompany.concertschedule.ui.conc_db.ConcDBFragment"
        android:label="@string/menu_concerts_db"
        tools:layout="@layout/fragment_conc_db" />
</navigation>