<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:background="@drawable/bg"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/playfair_display_bold"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/dark_blue"
            android:textSize="35sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/playfair_display_bold"
            android:text="@string/app_name_after"
            android:textAlignment="center"
            android:textColor="@color/dark_blue"
            android:textSize="18sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/playfair_display"
            android:text="@string/to_continue"
            android:textAlignment="center"
            android:textColor="@color/dark_blue"
            android:textSize="12sp" />
    </LinearLayout>


    <TextView
        android:id="@+id/text_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btns"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/playfair_display"
        android:text="@string/sign_in_text"
        android:textColor="@color/main_blue"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/playfair_display"
        android:text="@string/author"
        android:textColor="@color/main_blue"
        android:textSize="12sp" />

    <LinearLayout
        android:id="@+id/edit_layout"
        android:layout_width="match_parent"
        android:layout_margin="15dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_centerVertical="true"
        android:orientation="vertical">

    </LinearLayout>
    <LinearLayout
        android:id="@+id/btns"
        android:layout_width="match_parent"
        android:weightSum="2"
        android:layout_below="@id/edit_layout"
        android:layout_margin="15dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="6dp"
            android:layout_weight="1"
            android:background="@drawable/btn_sign"
            android:fontFamily="@font/playfair_display"
            android:text="@string/btn_sign_in"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_weight="1"
            android:background="@drawable/btn_sign"
            android:fontFamily="@font/playfair_display"
            android:text="@string/btn_sign_up"
            android:textColor="@android:color/white" />
    </LinearLayout>
</RelativeLayout>