<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/sign_up_edit"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="25dp">

    <com.rengwuxian.materialedittext.MaterialEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/old_pass"
        android:hint="@string/old_pass"
        android:inputType="textPassword"
        android:text=""
        android:textColor="@android:color/primary_text_dark"
        android:textColorHint="@color/main_blue"
        android:textSize="20sp"
        app:met_floatingLabel="normal"
        app:met_baseColor="@color/main_blue"
        app:met_primaryColor="@color/dark_blue"
        app:met_singleLineEllipsis="true"
        app:met_minCharacters="5"
        app:met_helperText="Введите старый пароль"
        />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/new_pass"
        android:hint="@string/new_pass"
        android:inputType="textPassword"
        android:text=""
        android:textColor="@android:color/primary_text_dark"
        android:textColorHint="@color/main_blue"
        android:textSize="20sp"
        app:met_floatingLabel="normal"
        app:met_baseColor="@color/main_blue"
        app:met_primaryColor="@color/dark_blue"
        app:met_singleLineEllipsis="true"
        app:met_minCharacters="5"
        app:met_helperText="Введите новый пароль"
        />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/new_pass_confirm"
        android:hint="@string/new_pass_confirm"
        android:inputType="textPassword"
        android:text=""
        android:textColor="@android:color/primary_text_dark"
        android:textColorHint="@color/main_blue"
        android:textSize="20sp"
        app:met_floatingLabel="normal"
        app:met_baseColor="@color/main_blue"
        app:met_primaryColor="@color/dark_blue"
        app:met_singleLineEllipsis="true"
        app:met_minCharacters="5"
        app:met_helperText="Повторите ввод пароля"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:weightSum="1"
        android:layout_margin="15dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_change_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="6dp"
            android:layout_weight="1"
            android:background="@drawable/btn_sign"
            android:fontFamily="@font/playfair_display"
            android:text="@string/btn_change_pass"
            android:textColor="@android:color/white" />
    </LinearLayout>
</LinearLayout>