<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    app:cardElevation="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/title_edit_view"
            android:hint="@string/title"
            android:inputType="text"
            android:text=""
            android:textColor="@android:color/primary_text_dark"
            android:textColorHint="@color/main_blue"
            android:textSize="20sp"
            app:met_floatingLabel="normal"
            app:met_baseColor="@color/main_blue"
            app:met_primaryColor="@color/dark_blue"
            app:met_errorColor="@color/error"
            app:met_singleLineEllipsis="true"
            app:met_helperText="Введите заголовок" />
        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/date_edit_view"
            android:hint="@string/date"
            android:inputType="text"
            android:text=""
            android:textColor="@android:color/primary_text_dark"
            android:textColorHint="@color/main_blue"
            android:textSize="20sp"
            app:met_floatingLabel="normal"
            app:met_baseColor="@color/main_blue"
            app:met_primaryColor="@color/dark_blue"
            app:met_errorColor="@color/error"
            app:met_singleLineEllipsis="true"
            app:met_helperText="Введите дату" />
        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/time_edit_view"
            android:hint="@string/time"
            android:inputType="text"
            android:text=""
            android:textColor="@android:color/primary_text_dark"
            android:textColorHint="@color/main_blue"
            android:textSize="20sp"
            app:met_floatingLabel="normal"
            app:met_baseColor="@color/main_blue"
            app:met_primaryColor="@color/dark_blue"
            app:met_errorColor="@color/error"
            app:met_singleLineEllipsis="true"
            app:met_helperText="Введите время" />
        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/place_edit_view"
            android:hint="@string/place"
            android:inputType="text"
            android:text=""
            android:textColor="@android:color/primary_text_dark"
            android:textColorHint="@color/main_blue"
            android:textSize="20sp"
            app:met_floatingLabel="normal"
            app:met_baseColor="@color/main_blue"
            app:met_primaryColor="@color/dark_blue"
            app:met_errorColor="@color/error"
            app:met_singleLineEllipsis="true"
            app:met_helperText="Введите место" />
        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/price_edit_view"
            android:hint="@string/price"
            android:inputType="text"
            android:text=""
            android:textColor="@android:color/primary_text_dark"
            android:textColorHint="@color/main_blue"
            android:textSize="20sp"
            app:met_floatingLabel="normal"
            app:met_baseColor="@color/main_blue"
            app:met_primaryColor="@color/dark_blue"
            app:met_errorColor="@color/error"
            app:met_singleLineEllipsis="true"
            app:met_helperText="Введите цену" />




    </LinearLayout>

</androidx.cardview.widget.CardView>